[package]
name = "sitemap-xml-writer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing"], optional = true }
url = { version = "2", optional = true }

[dev-dependencies]
anyhow = "1"

[features]
default = []
time = ["dep:time"]
url = ["dep:url"]
