[package]
name = "sitemap-xml-writer"
version = "0.0.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2021"
description = "A Rust library for writing sitemap.xml"
repository = "https://github.com/bouzuya/sitemap-xml-writer"
license = "MIT OR Apache-2.0"
keywords = ["sitemap", "writer"]
exclude = [".github"]

[dependencies]
chrono = { version = "0.4.23", optional = true }
once_cell = "1.17.1"
regex = "1.7.1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing"], optional = true }
url = { version = "2", optional = true }

[dev-dependencies]
anyhow = "1"

[features]
default = []
chrono = ["dep:chrono"]
time = ["dep:time"]
url = ["dep:url"]
